[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Python bindings for mq Markdown processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-python"
publish = false
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.6.0"

[lib]
crate-type = ["cdylib"]
name = "mq"

[dependencies]
mq-lang = "0.6.0"
mq-markdown = "0.6.0"
pyo3 = {version = "0.29.0", features = ["extension-module", "abi3-py39"]}

